display text area in pop-up

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -10,6 +10,8 @@
       </style>
     </head>
     <body>
+      <p>Enter your input.</p>
+      <textarea></textarea>
       <button></button>
     </body>
   </html>
