display default text

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -10,8 +10,9 @@
       </style>
     </head>
     <body>
+      <script src="background.js"></script>
       <p>Enter your input.</p>
-      <textarea></textarea>
+      <textarea id='inputField'>Default text</textarea>
       <button></button>
     </body>
   </html>
