manipulate user input

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -13,6 +13,6 @@
       <script src="background.js"></script>
       <p>Enter your input.</p>
       <textarea id='inputField'>Default text</textarea>
-      <button></button>
+      <button id='submit'></button>
     </body>
   </html>
