WIP - console log text from inputField

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -11,8 +11,9 @@
     </head>
     <body>
       <script src="background.js"></script>
-      <p>Enter your input.</p>
+      <p>Enter your input below.</p>
       <textarea id='inputField'>Default text</textarea>
       <button id='submit'></button>
+      <text id='outputField'></text>
     </body>
   </html>
