WIP chrome extension eventlistener

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -12,8 +12,8 @@
     <body>
       <script src="background.js"></script>
       <p>Enter your input below.</p>
-      <textarea id='inputField'>Default text</textarea>
-      <button id='submit'></button>
-      <text id='outputField'></text>
+      <textarea id="inputField">Default text</textarea>
+      <button id="submit"></button>
+      <text id="outputField"></text>
     </body>
   </html>
