display text after clicking button in chrome extension

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -10,10 +10,10 @@
       </style>
     </head>
     <body>
-      <script src="background.js"></script>
+      <script src="popup.js"></script>
       <p>Enter your input below.</p>
       <textarea id='inputField'>Default text</textarea>
       <button id='submit'></button>
-      <text id='outputField'></text>
+      <div id='outputField'></div>
     </body>
   </html>
