create css file, center text and round borders

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <style>
-        button {
-          height: 30px;
-          width: 30px;
-          outline: none;
-        }
-      </style>
+      <title>EmoReply</title>
+      <link href="popup.css" rel="stylesheet">
+      <script src="popup.js"></script>
     </head>
     <body>
-      <script src="popup.js"></script>
-      <p>Enter your input below.</p>
+      <p id='userPrompt'>Enter your input below.</p>
       <textarea id='inputField'>Default text</textarea>
       <button id='submit'></button>
       <div id='outputField'></div>
