WIP: begin integrating jquery, get can't find script error

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <script type = "text/javascript" src="/downloadedScripts/jquery-3.3.1.js"></script>
+        <script src="popup.js"></script>
       <style>
         button {
           height: 30px;
@@ -10,7 +12,6 @@
       </style>
     </head>
     <body>
-      <script src="popup.js"></script>
       <p>Enter your input below.</p>
       <textarea id='inputField'>Default text</textarea>
       <button id='submit'></button>
